--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Arnav Atluri | Multimedia Tomb Portfolio</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
 
@@ -45,7 +45,7 @@
     <div class="wrap">
       <div class="panel">
         <div class="profile">
-          <img class="avatar" src="assets/img/profile.jpg" alt="Portrait photo (no filter)" />
+          <img class="avatar" src="img/profile.jpg" alt="Portrait photo (no filter)" />
           <div>
             <h2 class="h2" style="margin-top:0;">All About Me</h2>
             <p class="sub">
@@ -53,7 +53,7 @@
               My name is <strong>Arnav Atluri</strong>, and I am a Multimedia student at Evergreen Valley High School.
               This semester I explored digital art and design while learning how to apply the Elements of Art and
               Principles of Design to create stronger compositions. I enjoy work that uses bold contrast, clear
-              focal points, and intentional color choices. For this portfolio, I used a Yu‑Gi‑Oh / Egyptian tomb
+              focal points, and intentional color choices. For this portfolio, I used a Yu-Gi-Oh / Egyptian tomb
               aesthetic to present my best pieces like artifacts in a museum.
             </p>
             <div class="hr"></div>
@@ -135,7 +135,7 @@
 
       <div class="grid" style="margin-top:16px;">
         <article class="card">
-          <div class="thumb" style="background-image:url('assets/img/art1.png');"></div>
+          <div class="thumb" style="background-image:url('img/art1.png');"></div>
           <div class="cardbody">
             <h3>Composition Study (Principles of Design)</h3>
             <div class="meta">
@@ -150,7 +150,7 @@
         </article>
 
         <article class="card">
-          <div class="thumb" style="background-image:url('assets/img/art-banner.png');"></div>
+          <div class="thumb" style="background-image:url('img/art-banner.png');"></div>
           <div class="cardbody">
             <h3>Speed of Light Poster</h3>
             <div class="meta">
@@ -165,7 +165,7 @@
         </article>
 
         <article class="card">
-          <div class="thumb" style="background-image:url('assets/img/exodia.png');"></div>
+          <div class="thumb" style="background-image:url('img/exodia.png');"></div>
           <div class="cardbody">
             <h3>Egyptian Gallery Mockup (Theme Build)</h3>
             <div class="meta">
@@ -180,7 +180,7 @@
         </article>
 
         <article class="card">
-          <div class="thumb" style="background-image:url('assets/img/stone-filler.png');"></div>
+          <div class="thumb" style="background-image:url('img/stone-filler.png');"></div>
           <div class="cardbody">
             <h3>Texture / Stone Study</h3>
             <div class="meta">
@@ -234,6 +234,7 @@
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
-  <script src="assets/js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
+
