--- a/index.html
+++ b/index.html
@@ -6,222 +6,50 @@
   <title>Arnav Atluri | Multimedia Tomb Portfolio</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
-<body>
+<body class="home-hero">
 
   <div class="nav">
     <div class="wrap">
       <div class="brand"><span class="dot"></span><strong>Arnav Atluri • Multimedia</strong></div>
       <nav class="navlinks">
-        <a href="#home">Home</a>
-        <a href="#about">About Me</a>
-        <a href="#map">Portal Map</a>
-        <a href="#multimedia">Multimedia</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#video">Video</a>
-        <a href="#cultural">Cultural</a>
+        <a class="active" href="index.html">Home</a>
+        <a href="about.html">About Me</a>
+        <a href="portal.html">Portal Map</a>
+        <a href="multimedia.html">Multimedia</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="video.html">Video</a>
+        <a href="cultural.html">Cultural</a>
       </nav>
     </div>
   </div>
 
-  <header class="hero" id="home">
+  <header class="hero">
     <div class="wrap">
       <div class="badge"><span class="dot"></span><span class="small">Yu-Gi-Oh / Exodia • Egyptian Tomb Theme</span></div>
       <h1>Artifact Archive Portfolio</h1>
       <p>
-        This site is designed like a tomb exhibit: each section is a “sealed chamber” with labeled artifacts (my work),
+        This site is designed like a tomb exhibit: each page is a sealed chamber with labeled artifacts (my work),
         short write-ups, and a critique video using the Elements of Art and Principles of Design.
       </p>
+
       <div class="quick" aria-label="Quick navigation">
-        <a class="cardbtn" href="#about">Enter: About Me</a>
-        <a class="cardbtn" href="#portfolio">Enter: Gallery</a>
-        <a class="cardbtn" href="#video">Enter: Critique Video</a>
-        <a class="cardbtn" href="#multimedia">Enter: Multimedia Reflection</a>
+        <a class="cardbtn" href="about.html">Enter: About Me</a>
+        <a class="cardbtn" href="portfolio.html">Enter: Gallery</a>
+        <a class="cardbtn" href="video.html">Enter: Critique Video</a>
+        <a class="cardbtn" href="multimedia.html">Enter: Multimedia Reflection</a>
       </div>
     </div>
   </header>
 
-  <!-- REQUIRED: Home page bio with photo and paragraph -->
-  <section class="section" id="about">
+  <section class="section">
     <div class="wrap">
       <div class="panel">
-        <div class="profile">
-          <img class="avatar" src="img/profile.jpg" alt="Portrait photo (no filter)" />
-          <div>
-            <h2 class="h2" style="margin-top:0;">All About Me</h2>
-            <p class="sub">
-              <strong>Replace this paragraph with your real bio.</strong>
-              My name is <strong>Arnav Atluri</strong>, and I am a Multimedia student at Evergreen Valley High School.
-              This semester I explored digital art and design while learning how to apply the Elements of Art and
-              Principles of Design to create stronger compositions. I enjoy work that uses bold contrast, clear
-              focal points, and intentional color choices. For this portfolio, I used a Yu-Gi-Oh / Egyptian tomb
-              aesthetic to present my best pieces like artifacts in a museum.
-            </p>
-            <div class="hr"></div>
-            <p class="small">
-              Rubric check: Photo of me + one paragraph bio. (You can also add your class period and the year here.)
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="hr"></div>
-      <div class="banner" role="img" aria-label="Featured artwork banner"></div>
-    </div>
-  </section>
-
-  <!-- Portal map using Exodia image (same-page links) -->
-  <section class="section" id="map">
-    <div class="wrap">
-      <h2 class="h2">Portal Map (Click a Relic)</h2>
-      <p class="sub">
-        This “Exodia gallery map” works like a navigation portal. Each framed part links to the matching section below.
-      </p>
-
-      <div class="tomb-map">
-        <div class="gallery" role="img" aria-label="Exodia gallery with clickable paintings">
-          <!-- Center (Portfolio) -->
-          <a class="hotspot" href="#portfolio"
-             style="left: 35%; top: 14%; width: 30%; height: 56%;"
-             aria-label="Open Portfolio"></a>
-
-          <!-- Left Arm (Video) -->
-          <a class="hotspot" href="#video"
-             style="left: 4%; top: 8%; width: 26%; height: 36%;"
-             aria-label="Open Video"></a>
-
-          <!-- Right Arm (About Me) -->
-          <a class="hotspot" href="#about"
-             style="left: 70%; top: 8%; width: 26%; height: 36%;"
-             aria-label="Open About Me"></a>
-
-          <!-- Left Leg (Multimedia) -->
-          <a class="hotspot" href="#multimedia"
-             style="left: 6%; top: 48%; width: 26%; height: 40%;"
-             aria-label="Open Multimedia"></a>
-
-          <!-- Right Leg (Cultural) -->
-          <a class="hotspot" href="#cultural"
-             style="left: 68%; top: 48%; width: 26%; height: 40%;"
-             aria-label="Open Cultural Art Unit"></a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- REQUIRED: Multimedia reflection -->
-  <section class="section" id="multimedia">
-    <div class="wrap">
-      <div class="panel">
-        <h2 class="h2">Multimedia Reflection</h2>
+        <h2 class="h2">Start Here</h2>
         <p class="sub">
-          <strong>Use your own words.</strong> Multimedia combines visual art, design, and technology to communicate ideas.
-          This semester, I learned how the <strong>Elements of Art</strong> (line, shape, value, texture, color, space)
-          and <strong>Principles of Design</strong> (contrast, balance, emphasis, unity, movement, rhythm) can make a piece
-          clearer and more impactful. Next semester, I want to improve my skills in motion/animation and stronger typography
-          so my designs feel more professional and dynamic.
+          Use the navigation links above to explore each chamber. The Portal Map page works like a “museum wall”
+          where you click a relic to jump to a page.
         </p>
       </div>
-    </div>
-  </section>
-
-  <!-- REQUIRED: 3-5 artworks with medium and description -->
-  <section class="section" id="portfolio">
-    <div class="wrap">
-      <h2 class="h2">Portfolio Gallery (Artifacts)</h2>
-      <p class="sub">
-        Each piece includes the <strong>medium</strong> and a short <strong>description</strong> explaining why I chose it.
-        Replace images/titles/descriptions to match your real work (3–5 total).
-      </p>
-
-      <div class="grid" style="margin-top:16px;">
-        <article class="card">
-          <div class="thumb" style="background-image:url('img/art1.png');"></div>
-          <div class="cardbody">
-            <h3>Composition Study (Principles of Design)</h3>
-            <div class="meta">
-              <span class="pill"><strong>Medium:</strong> Digital design</span>
-              <span class="pill">Contrast</span><span class="pill">Placement</span><span class="pill">Scale</span>
-            </div>
-            <p class="sub" style="margin-top:10px;">
-              I chose this piece because it demonstrates clear composition choices. I used contrast and placement to create a focal
-              point and guide the viewer’s eye. The clean shapes and spacing emphasize hierarchy and balance.
-            </p>
-          </div>
-        </article>
-
-        <article class="card">
-          <div class="thumb" style="background-image:url('img/art-banner.png');"></div>
-          <div class="cardbody">
-            <h3>Speed of Light Poster</h3>
-            <div class="meta">
-              <span class="pill"><strong>Medium:</strong> Vector illustration</span>
-              <span class="pill">Color</span><span class="pill">Rhythm</span><span class="pill">Emphasis</span>
-            </div>
-            <p class="sub" style="margin-top:10px;">
-              I chose this artwork because it uses bold color and repeated shapes to create energy and movement. The central symbol
-              creates emphasis, while the surrounding figures create rhythm and unity across the composition.
-            </p>
-          </div>
-        </article>
-
-        <article class="card">
-          <div class="thumb" style="background-image:url('img/exodia.png');"></div>
-          <div class="cardbody">
-            <h3>Egyptian Gallery Mockup (Theme Build)</h3>
-            <div class="meta">
-              <span class="pill"><strong>Medium:</strong> Digital layout</span>
-              <span class="pill">Texture</span><span class="pill">Value</span><span class="pill">Unity</span>
-            </div>
-            <p class="sub" style="margin-top:10px;">
-              I chose this piece because it shows how theme and atmosphere can support presentation. Dark values and warm highlights
-              create an ancient “tomb” mood, while consistent framing creates unity like a museum exhibit.
-            </p>
-          </div>
-        </article>
-
-        <article class="card">
-          <div class="thumb" style="background-image:url('img/stone-filler.png');"></div>
-          <div class="cardbody">
-            <h3>Texture / Stone Study</h3>
-            <div class="meta">
-              <span class="pill"><strong>Medium:</strong> Digital texture</span>
-              <span class="pill">Texture</span><span class="pill">Value</span><span class="pill">Contrast</span>
-            </div>
-            <p class="sub" style="margin-top:10px;">
-              I chose this piece because texture communicates mood. Strong value contrast helps the surface feel realistic and sets
-              a dramatic background for other artifacts.
-            </p>
-          </div>
-        </article>
-      </div>
-    </div>
-  </section>
-
-  <!-- REQUIRED: Video critique -->
-  <section class="section" id="video">
-    <div class="wrap">
-      <div class="panel">
-        <h2 class="h2">Video Critique (2 minutes max)</h2>
-        <p class="sub">
-          Replace the YouTube embed below with your video. In the video, critique 3 artworks and answer:
-          (1) why you chose them, (2) favorite part, (3) what you would improve.
-        </p>
-        <div class="hr"></div>
-        <div class="video">
-          <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen title="Critique video"></iframe>
-        </div>
-        <p class="small" style="margin-top:12px;">
-          Tip: If your teacher needs a non-YouTube link, you can swap the iframe for a Google Drive “preview” embed.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Cultural part blank as requested -->
-  <section class="section" id="cultural">
-    <div class="wrap">
-      <h2 class="h2">Cultural Art Unit</h2>
-      <!-- Intentionally left blank -->
     </div>
   </section>
 
@@ -231,10 +59,7 @@
     </div>
   </footer>
 
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   <script src="js/main.js"></script>
 </body>
 </html>
-
