--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       <div class="badge"><span class="dot"></span><span class="small">Yu-Gi-Oh / Exodia • Egyptian Tomb Theme</span></div>
       <h1>Artifact Archive Portfolio</h1>
       <p>
-        This site is designed like a tomb exhibit: each page is a sealed chamber with labeled artifacts (my work),
-        short write-ups, and a critique video using the Elements of Art and Principles of Design.
+        This portfolio is designed as an artifact archive inspired by a Yu-Gi-Oh / Egyptian tomb theme. Each page represents
+        a sealed chamber that displays my work as artifacts, with clear labels, explanations, and a video critique.
+        The design uses dark values, gold highlights, and structured layouts to create a museum-like experience.
       </p>
 
       <div class="quick" aria-label="Quick navigation">
@@ -41,17 +42,7 @@
     </div>
   </header>
 
-  <section class="section">
-    <div class="wrap">
-      <div class="panel">
-        <h2 class="h2">Start Here</h2>
-        <p class="sub">
-          Use the navigation links above to explore each chamber. The Portal Map page works like a “museum wall”
-          where you click a relic to jump to a page.
-        </p>
-      </div>
-    </div>
-  </section>
+ 
 
   <footer>
     <div class="wrap">
