--- a/about.html
+++ b/about.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Arnav Atluri | Multimedia Tomb Portfolio</title>
+  <title>About Me | Arnav Atluri</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
-<body class="home-hero">
+<body>
 
   <div class="nav">
     <div class="wrap">
       <div class="brand"><span class="dot"></span><strong>Arnav Atluri • Multimedia</strong></div>
       <nav class="navlinks">
-        <a class="active" href="index.html">Home</a>
-        <a href="about.html">About Me</a>
+        <a href="index.html">Home</a>
+        <a class="active" href="about.html">About Me</a>
         <a href="portal.html">Portal Map</a>
         <a href="multimedia.html">Multimedia</a>
         <a href="portfolio.html">Portfolio</a>
@@ -23,33 +23,34 @@
     </div>
   </div>
 
-  <header class="hero">
+  <header class="pagehero">
     <div class="wrap">
-      <div class="badge"><span class="dot"></span><span class="small">Yu-Gi-Oh / Exodia • Egyptian Tomb Theme</span></div>
-      <h1>Artifact Archive Portfolio</h1>
-      <p>
-        This site is designed like a tomb exhibit: each page is a sealed chamber with labeled artifacts (my work),
-        short write-ups, and a critique video using the Elements of Art and Principles of Design.
-      </p>
-
-      <div class="quick" aria-label="Quick navigation">
-        <a class="cardbtn" href="about.html">Enter: About Me</a>
-        <a class="cardbtn" href="portfolio.html">Enter: Gallery</a>
-        <a class="cardbtn" href="video.html">Enter: Critique Video</a>
-        <a class="cardbtn" href="multimedia.html">Enter: Multimedia Reflection</a>
-      </div>
+      <h1 class="page-title">All About Me</h1>
+      <p class="sub">Required: portrait photo (no filter) + one-paragraph bio.</p>
     </div>
   </header>
 
   <section class="section">
     <div class="wrap">
       <div class="panel">
-        <h2 class="h2">Start Here</h2>
-        <p class="sub">
-          Use the navigation links above to explore each chamber. The Portal Map page works like a “museum wall”
-          where you click a relic to jump to a page.
-        </p>
+        <div class="profile">
+          <img class="avatar" src="img/profile.jpg" alt="Portrait photo (no filter)" />
+          <div>
+            <h2 class="h2" style="margin-top:0;">Bio</h2>
+            <p class="sub">
+              My name is Arnav Atluri, and I am a Multimedia student at Evergreen Valley High School. This semester, I explored
+              digital art and design while learning how to apply the Elements of Art and Principles of Design to create stronger
+              and more intentional compositions. I enjoy creating work that uses strong contrast, clear focal points, and thoughtful
+              color choices to communicate ideas effectively. For this portfolio, I chose a Yu-Gi-Oh and Egyptian tomb theme to present
+              my artwork as artifacts in a gallery, which reflects my interest in combining visual storytelling with design concepts.
+            </p>
+          </div>
+        </div>
       </div>
+
+      <div class="hr"></div>
+
+      <div class="banner banner-gold" role="img" aria-label="Gold lights banner"></div>
     </div>
   </section>
 
