--- a/portal.html
+++ b/portal.html
@@ -32,29 +32,32 @@
 
   <section class="section">
     <div class="wrap">
+      <p class="sub">
+        This Portal Map functions as a visual navigation system for the portfolio. Inspired by the Exodia gallery layout, each framed
+        section acts as a clickable relic that leads to a different chamber of the site. This design emphasizes unity and movement while
+        keeping navigation engaging and thematic.
+      </p>
+
+      <div class="hr"></div>
+
       <div class="tomb-map">
         <div class="gallery" role="img" aria-label="Exodia gallery with clickable paintings">
-          <!-- Center (Portfolio) -->
           <a class="hotspot" href="portfolio.html"
              style="left: 35%; top: 14%; width: 30%; height: 56%;"
              aria-label="Open Portfolio"></a>
 
-          <!-- Left Arm (Video) -->
           <a class="hotspot" href="video.html"
              style="left: 4%; top: 8%; width: 26%; height: 36%;"
              aria-label="Open Video"></a>
 
-          <!-- Right Arm (About Me) -->
           <a class="hotspot" href="about.html"
              style="left: 70%; top: 8%; width: 26%; height: 36%;"
              aria-label="Open About Me"></a>
 
-          <!-- Left Leg (Multimedia) -->
           <a class="hotspot" href="multimedia.html"
              style="left: 6%; top: 48%; width: 26%; height: 40%;"
              aria-label="Open Multimedia"></a>
 
-          <!-- Right Leg (Cultural) -->
           <a class="hotspot" href="cultural.html"
              style="left: 68%; top: 48%; width: 26%; height: 40%;"
              aria-label="Open Cultural Art Unit"></a>
