--- a/mutlimedia.html
+++ b/mutlimedia.html
@@ -34,7 +34,12 @@
     <div class="wrap">
       <div class="panel">
         <p class="sub">
-          <strong>Use your own words.</strong> Multimedia combines visual art, design, and technology to communicate ideas…
+          Multimedia is the combination of visual art, design, and technology to communicate ideas in creative and effective ways.
+          Throughout this semester, I learned how the Elements of Art—such as line, shape, color, value, texture, and space—and the
+          Principles of Design—such as contrast, balance, emphasis, unity, movement, and rhythm—can significantly improve the clarity
+          and impact of a design. By applying these concepts, I was able to create compositions with stronger focal points and better
+          visual hierarchy. Next semester, I want to improve my skills in motion graphics, animation, and typography so that my work feels
+          more dynamic, professional, and polished.
         </p>
       </div>
     </div>
