--- a/video.html
+++ b/video.html
@@ -34,12 +34,18 @@
     <div class="wrap">
       <div class="panel">
         <p class="sub">
-          Replace VIDEO_ID with your video. Answer: (1) why you chose these, (2) favorite part, (3) what you’d improve.
+          In this video, I critique three of my strongest artworks from this portfolio. I explain why I chose each piece,
+          my favorite part of creating them, and what I would change or improve if I were to redesign them. Throughout the critique,
+          I use vocabulary from the Elements of Art and Principles of Design to describe my artistic decisions.
         </p>
         <div class="hr"></div>
         <div class="video">
           <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen title="Critique video"></iframe>
         </div>
+        <p class="sub" style="margin-top:12px;">
+          Replace <strong>VIDEO_ID</strong> with your actual video ID (YouTube). If your teacher prefers Google Drive, tell me and I’ll
+          give you the Drive embed version.
+        </p>
       </div>
     </div>
   </section>
