--- a/portal.html
+++ b/portal.html
@@ -12,9 +12,9 @@
     <div class="wrap">
       <div class="brand"><span class="dot"></span><strong>Arnav Atluri • Multimedia</strong></div>
       <nav class="navlinks">
-        <a href="index.html">Home</a>
+        <a href="portal.html">Home</a>
         <a href="about.html">About Me</a>
-        <a class="active" href="portal.html">Portal Map</a>
+        
         <a href="multimedia.html">Multimedia</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="video.html">Video</a>
