--- a/video.html
+++ b/video.html
@@ -14,7 +14,6 @@
       <nav class="navlinks">
         <a href="portal.html">Home</a>
         <a href="about.html">About Me</a>
-        
         <a href="multimedia.html">Multimedia</a>
         <a href="portfolio.html">Portfolio</a>
         <a class="active" href="video.html">Video</a>
@@ -26,7 +25,7 @@
   <header class="pagehero">
     <div class="wrap">
       <h1 class="page-title">Video Critique</h1>
-      <p class="sub">Required: critique 3 artworks using Elements of Art + Principles of Design (2 minutes max).</p>
+    
     </div>
   </header>
 
@@ -40,7 +39,7 @@
         </p>
         <div class="hr"></div>
         <div class="video">
-          <iframe src="https://www.youtube.com/embed/VIDEO_ID" allowfullscreen title="Critique video"></iframe>
+          <iframe src="https://youtu.be/1sw4Y0uNl_g" allowfullscreen title="Critique video"></iframe>
         </div>
         <p class="sub" style="margin-top:12px;">
           Replace <strong>VIDEO_ID</strong> with your actual video ID (YouTube). If your teacher prefers Google Drive, tell me and I’ll
