--- a/multimedia.html
+++ b/multimedia.html
@@ -27,12 +27,12 @@
     <div class="wrap">
       <div class="panel">
         <p class="sub">
-          Multimedia is the combination of visual art, design, and technology to communicate ideas in creative and effective ways.
-          Throughout this semester, I learned how the Elements of Art—such as line, shape, color, value, texture, and space—and the
-          Principles of Design—such as contrast, balance, emphasis, unity, movement, and rhythm—can significantly improve the clarity
-          and impact of a design. By applying these concepts, I was able to create compositions with stronger focal points and better
-          visual hierarchy. Next semester, I want to improve my skills in motion graphics, animation, and typography so that my work feels
-          more dynamic, professional, and polished.
+          Multimedia refers to the integration of visual arts, design, and technology to message ideas in creative and effective ways.
+During this semester, I have gained knowledge about the use of the Elements of Art, including line, shape, color, value, texture, and space, and the
+By using the Principles of Design like Contrast, Balance, Emphasis, Unity, Movement, and Rhythm appropriately, one can certainly improve the clarity
+and impact of a design. By using these ideas, I was successful at creating pieces with better focus and attention, such as
+visual hierarchy. In the next semester, I hope to enhance my abilities and knowledge in motion graphics, animation, and typographical skills to make my final products look
+more dynamic, professional, and polished.
         </p>
       </div>
     </div>
