--- a/video.html
+++ b/video.html
@@ -39,7 +39,7 @@
         </p>
         <div class="hr"></div>
         <div class="video">
-          <iframe src="https://youtu.be/1sw4Y0uNl_g" allowfullscreen title="Critique video"></iframe>
+          <iframe src="https://www.youtube.com/watch?v=1sw4Y0uNl_g" allowfullscreen title="Critique video"></iframe>
         </div>
       </div>
     </div>
