--- a/video.html
+++ b/video.html
@@ -39,7 +39,12 @@
         </p>
         <div class="hr"></div>
         <div class="video">
-          <iframe src="https://www.youtube.com/watch?v=1sw4Y0uNl_g" allowfullscreen title="Critique video"></iframe>
+          <iframe
+  src="https://www.youtube.com/embed/1sw4Y0uNl_g"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen
+  title="Critique video">
+</iframe>
         </div>
       </div>
     </div>
