--- a/portal.html
+++ b/portal.html
@@ -35,7 +35,7 @@
       <p class="sub">
         This Portal Map functions as a visual navigation system for the portfolio. Inspired by the Exodia gallery layout, each framed
         section acts as a clickable relic that leads to a different chamber of the site. This design emphasizes unity and movement while
-        keeping navigation engaging and thematic.
+        keeping navigation engaging and thematic. Head = Portfolio, Right Arm = About Me, Left Arm = Video, Right Leg = Cultural Art Unit, Left Leg = Multimedia
       </p>
 
       <div class="hr"></div>
