--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     <div class="wrap">
       <div class="panel">
         <div class="profile">
-          <img class="avatar" src="img/profile.png" alt="Portrait photo (no filter)" />
+          <img class="avatar" src="img/Profile.png" alt="Portrait photo (no filter)" />
           <div>
             <h2 class="h2" style="margin-top:0;">Bio</h2>
             <p class="sub">
